# owayeol_patrol

./: CMakeLists.txt  README.md  package.xml  patrol.launch  plugin.xml  setup.py
arduino/robot/: foxbot_core_config.h  robot.ino
arduino/robot_camera/: foxbot_core_config.h  robot_camera.ino
launch/: foxbot_remote.launch  multi_patrol.launch  patrol.launch  robot_urdf.launch  world.launch
msg/: ChangeRobot.msg  RobotState.msg  YoloResult.msg
opencr/owayeol_core/: owayeol.h  owayeol_core.ino  owayeol_core_config.h
resource/: My  My1.ui  MyPlugin.ui  MyPlugin1.ui  test.ui  test1.ui  test2.ui
scripts/: owayeol
src/: key.py  patrol.py  server.py
src/rqt_mypkg/: patrol.py  server.py
urdf/: robot.urdf
